--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Version 0.1.4 - 2015-11-22
+    - Add drone.io badge
+
+
 Version 0.1.3 - 2015-11-22
     - Add missing words file
     - Fix readme copy
